backend/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: Scalable and Cost-Effective Cloud Infrastructure for Reporting Platform as a Capstone Project

Parameters:
  DBName:
    Type: String
    Default: reporting_platform_db
    Description: The database name for the RDS instance.
  DBUsername:
    Type: String
    Default: postgres
    Description: Master username for the RDS instance.
  DBPassword:
    Type: String
    NoEcho: true
    MinLength: 8
    Description: Master password for the RDS instance (secret).

Resources:
  ReportingVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ReportingVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ReportingVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']

  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: RDS private subnet group
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Lambda access
      VpcId: !Ref ReportingVPC

  LambdaSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref LambdaSecurityGroup

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Postgre access
      VpcId: !Ref ReportingVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref LambdaSecurityGroup  

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ReportingVPC

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  S3VpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref ReportingVPC
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PrivateRouteTable

  SSMVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref ReportingVPC
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ssm"
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1
      SecurityGroupIds:
        - !Ref LambdaSecurityGroup
      PrivateDnsEnabled: true

  ReportingPlatformBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "${AWS::StackName}-reports-${AWS::AccountId}"
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      LifecycleConfiguration:
        Rules:
          - Id: "DeleteOldReports"
            Status: "Enabled"
            ExpirationInDays: 30

  ReportingPlatformRDS:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Snapshot
    UpdateReplacePolicy: Snapshot
    Properties:
      DBInstanceClass: db.t3.micro
      StorageType: gp2
      AllocatedStorage: '20'
      MultiAZ: false
      PubliclyAccessible: false
      Engine: postgres
      EngineVersion: '18.3'
      DBName: !Ref DBName
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      BackupRetentionPeriod: 1
      DBSubnetGroupName: !Ref RDSSubnetGroup
      VPCSecurityGroups:
        - !Ref RDSSecurityGroup

  ReportingPlatformAPI:
    Type: AWS::Serverless::Api
    Properties:
      StageName: prod
      Cors: "'*'"

  ReportingFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: ./
      Handler: handler.handler
      Runtime: nodejs22.x
      Timeout: 30
      Policies:
        - Statement:
            - Effect: Allow
              Action: ssm:GetParameter
              Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/gabaynet/reporting-platform/*"
            - Effect: Allow
              Action:
                - kms:Decrypt
              Resource: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/aws/ssm"
            - Effect: Allow
              Action:
                - "rds-db:connect"
                - "rds:DescribeDBInstances"
              Resource: "*"
        - S3CrudPolicy:
            BucketName: !Ref ReportingPlatformBucket
      VpcConfig:
        SecurityGroupIds:
          - !Ref LambdaSecurityGroup
        SubnetIds:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
      Events:
        ApiEvent:
          Type: Api
          Properties:
            Path: /{proxy+}
            Method: ANY
            RestApiId: !Ref ReportingPlatformAPI
      Environment:
        Variables: 
          DB_USER: !Ref DBUsername
          DB_HOST: !GetAtt ReportingPlatformRDS.Endpoint.Address
          DB_NAME: !Ref DBName
          DB_PASS_PARAM: /gabaynet/reporting-platform/db-password
          DB_PORT: '5432'
          JWT_SECRET_PARAM: /gabaynet/reporting-platform/jwt-secret
          JWT_EXPIRES_IN: 2h
          AWS_BUCKET_NAME: !Ref ReportingPlatformBucket
          NODE_ENV: production

  SeedDatabaseFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: ./
      Handler: seed.handler
      Runtime: nodejs22.x
      Timeout: 30
      Policies:
        - Statement:
            - Effect: Allow
              Action: ssm:GetParameter
              Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/gabaynet/reporting-platform/*"
            - Effect: Allow
              Action:
                - kms:Decrypt
              Resource: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/aws/ssm"
      VpcConfig:
        SecurityGroupIds:
          - !Ref LambdaSecurityGroup
        SubnetIds:
          - !Ref PrivateSubnet1
      Environment:
        Variables:
          DB_USER: !Ref DBUsername
          DB_HOST: !GetAtt ReportingPlatformRDS.Endpoint.Address
          DB_NAME: !Ref DBName
          DB_PASS_PARAM: /gabaynet/reporting-platform/db-password
          DB_PORT: '5432'
          NODE_ENV: production
